# AtmosphericTurbulence

./: AtmosphericTurbulence.c  AtmosphericTurbulence.h  AtmosphericTurbulence_conf.h  AtmosphericTurbulence_prediction.c  AtmosphericTurbulence_prediction.h  CMakeLists.txt  README.md  ReadConf.c  ReadConf.h  Z_Air.c  Z_Air.h  makeHV_CN2prof.c  makeHV_CN2prof.h  make_AtmosphericTurbulence_vonKarmanWind.c  make_AtmosphericTurbulence_vonKarmanWind.h  make_master_turbulence_screen.c  make_master_turbulence_screen.h  make_master_turbulence_screen_pow.c  make_master_turbulence_screen_pow.h  make_wavefront_sequence.c  make_wavefront_sequence.h
scripts/: milk-atmturb-mkconf  milk-atmturb-runturb
